--- a/tvcust/src/main/res/values/strings.xml
+++ b/tvcust/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="title_activity_me_detail">编辑个人资料</string>
     <string name="title_activity_order_detail">订单详情</string>
     <string name="title_activity_order_allocate">OrderAllocateActivity</string>
-    <string name="title_activity_comp">CompActivity</string>
+    <string name="title_activity_comp">办事处</string>
+    <string name="title_activity_modify_phone">修改绑定手机</string>
 </resources>
