--- a/tvcust/src/main/res/values/strings.xml
+++ b/tvcust/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="title_activity_order_allocate">OrderAllocateActivity</string>
     <string name="title_activity_comp">办事处</string>
     <string name="title_activity_modify_phone">修改绑定手机</string>
+    <string name="title_activity_setting_security">安全设置</string>
 </resources>
