--- a/tvcust/src/main/res/values/strings.xml
+++ b/tvcust/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="title_activity_modify_psw">修改密码</string>
     <string name="title_activity_assist">援助选择</string>
     <string name="title_activity_copy">抄送</string>
+    <string name="title_activity_select_user">SelectUserActivity</string>
 </resources>
